Don't use javax.xml.bind.DatatypeConverter.parse64Binary() here because javax.xml.bind.DatatypeConverter is not directly available in Java 9.  To use it requires compiling with --add-modules java.xml.bind, which seems to not be easily supported in Eclipse.  An alternative would be to use Apache commons codec, but this would introduce a compile and runtime dependency.